# cosiedzieje

./: .env  Cargo.toml  README.md  Rocket.toml
sql/: structure.sql
src/: lib.rs  main.rs
src/fairings/: mod.rs
src/markers/: mod.rs
src/routes/: mod.rs
src/users/: login.rs  register.rs
static/: index.html
static/assets/: index.569f6a9f.js  index.6fce3a31.js  index.f968a5e2.css
