[package]
name = "somsiad-api"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0"
authors = [ "Marcin Mikuła <marcinmikula840@gmail.com>", "Piotr Jakóbczyk", "Piotr Skóra", "Marcel Maciaszczyk", "Jakub Jastrząb" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
serde = { version = "1.0.145", features = [ "derive" ] }
bcrypt = "0.13.0"
nanoid = "0.4.0"
lettre = { version = "0.10.1", features = [ "tokio1-native-tls", "tokio1", "sendmail-transport", "serde" ] }
anyhow = "1.0.51"
validator = { version = "0.16.0", features = ["derive"] }
serde_json = {version = "1.0.86", features = ["raw_value"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "mysql", "macros", "chrono", "json"] }
dotenv = "0.15.0"
chrono = { version = "0.4.22", features = ["serde"] }
